# amalyzer

./: CMakeLists.txt  README.md  analyzer.h  audio.mp3.analisemetadata  build_and_run.sh  config_manager.cpp  config_manager.h  main.cpp  main.py
.github/: WORKFLOWS.md
.github/workflows/: build-android.yml  build-on-push.yml  build-release.yml
